# rust_practice

./: Dockerfile  compose.yaml
.devcontainer/: devcontainer.json
basic_concurrency/sec02/: Cargo.toml
basic_concurrency/sec03/: Cargo.toml
basic_concurrency/sec03/src/: channel.rs  semaphore.rs
basic_concurrency/sec04/: Cargo.toml
catr/: Cargo.toml  all.out  mk-outs.sh
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
guessing_game/src/: main.rs
headr/: Cargo.toml
hello_cargo/: Cargo.toml
hello_cargo/tests/: cli.rs
rust-algorithm/ch01/: Cargo.toml  GEMINI.md
rust-algorithm/ch02/: Cargo.toml
rust-algorithm/ch03/: Cargo.toml
rust-command/cutr/: Cargo.toml
rust-command/findr/: Cargo.toml
rust-command/minigrep/: poem.txt
rust-command/uniqr/: Cargo.toml
rust-command/wcr/: Cargo.toml
rust-network/dhcp_server/: Cargo.toml  dhcp.db
rust-network/packet-capture/: Cargo.toml
rust-network/port-scanner/: Cargo.toml
rust-network/webserver/: Cargo.toml
rust-tcp/toytcp/: Cargo.toml
rust-tutorial/: Cargo.toml
rust_concurrency/gemini_practice/: Cargo.toml
rust_concurrency/sec01/: Cargo.toml
rust_concurrency/sec02/: Cargo.toml
rust_concurrency/sec04/: Cargo.toml
rust_concurrency/sec05/: Cargo.toml
rust_concurrency/web_app_practice/: Cargo.toml
rust_concurrency/web_app_practice/src/: actors.rs  handlers.rs  main.rs  models.rs  repositories.rs
simple_webserver/: Cargo.toml
simple_webserver/src/: lib.rs  main.rs
uniqr/: Cargo.toml
wcr/src/: lib.rs
wcr/tests/: cli.rs
(+54 files in other folders)
